bug: Menu is visible in waterfall-header

--- a/web/styles.scss
+++ b/web/styles.scss
@@ -11,6 +11,7 @@ html, body {
 
 .mdl-layout__header-row {
     padding-left: 20px;
+    padding-right: 12px;
 
     .mdl-layout-title {
         a {
@@ -50,6 +51,10 @@ html, body {
     }
 }
 
+.mdl-layout__header--waterfall:not(.is-compact) {
+    overflow: visible;
+}
+
 .mdl-layout__header-row-today {
     display: flex;
     flex-direction: row;
@@ -67,6 +72,10 @@ html, body {
         align-content: space-between; // ||
         align-items: stretch; // ↓
         flex-grow: 1;
+
+        .mdl-layout__header--waterfall.is-compact & {
+            display: none;
+        }
 
         //font-family: 'Open Sans', sans-serif;
         //font-family: 'Open Sans Condensed', sans-serif;
